--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.2 | ^8.0",
         "illuminate/database": "^7.3 | ^8.0",
         "ramsey/uuid": "^4.0"
     },
