--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": "^7.2 | ^8.0",
-        "illuminate/database": "^7.3 | ^8.0",
+        "illuminate/database": "^8.22",
         "ramsey/uuid": "^4.0"
     },
     "require-dev": {},
